Gallotia galloti files for upload to AmP

--- a/Gallotia_galloti_res.html
+++ b/Gallotia_galloti_res.html
@@ -44,7 +44,7 @@
   </div>
 
   <div class="par">
-  <h4>COMPLETE = 2.5; MRE =    0.101; SMSE =    0.096 </h4>
+  <h4>COMPLETE = 2.5; MRE =    0.110; SMSE =    0.098 </h4>
   </div>
 
   <p class="clear"></p>
@@ -53,27 +53,26 @@
   <h2>Data & predictions</h2>
   <TABLE id="prd">
     <TR  class="head"><TH>data</TH> <TH>prd</TH> <TH>RE</TH>  <TH>symbol</TH> <TH>units</TH> <TH>description</TH> </TR>
-    <TR><TD> 56</TD> <TD>59.38</TD> <TD>0.06029</TD> <TD>ab</TD> <TD>d</TD> <TD>age at birth</TD></TR>
-    <TR><TD>1460</TD> <TD>1379</TD> <TD>0.05566</TD> <TD>tp</TD> <TD>d</TD> <TD>time since birth at puberty</TD></TR>
-    <TR><TD>2920</TD> <TD>2920</TD> <TD>6.71e-06</TD> <TD>am</TD> <TD>d</TD> <TD>life span</TD></TR>
-    <TR><TD>4.5</TD> <TD>4.067</TD> <TD>0.09617</TD> <TD>Lb</TD> <TD>cm</TD> <TD>SVL at hatching</TD></TR>
-    <TR><TD>7.7</TD> <TD>9.305</TD> <TD>0.2084</TD> <TD>Lp</TD> <TD>cm</TD> <TD>SVL at puberty</TD></TR>
-    <TR><TD>8.1</TD> <TD>12.24</TD> <TD>0.5109</TD> <TD>Lpm</TD> <TD>cm</TD> <TD>SVL at puberty males</TD></TR>
-    <TR><TD>10.2</TD> <TD>11.16</TD> <TD>0.0939</TD> <TD>Li</TD> <TD>cm</TD> <TD>ultimate SVL</TD></TR>
-    <TR><TD>12.2</TD> <TD>12.24</TD> <TD>0.003157</TD> <TD>Lim</TD> <TD>cm</TD> <TD>ultimate SVL males</TD></TR>
-    <TR><TD>1.63</TD> <TD>1.704</TD> <TD>0.04526</TD> <TD>Ww0</TD> <TD>g</TD> <TD>wet weight of egg</TD></TR>
-    <TR><TD>1.16</TD> <TD>1.109</TD> <TD>0.04369</TD> <TD>Wwb</TD> <TD>g</TD> <TD>wet weight of hatchlings</TD></TR>
-    <TR><TD>20.72</TD> <TD>22.9</TD> <TD>0.1054</TD> <TD>Wwi</TD> <TD>g</TD> <TD>ultimate wet weight</TD></TR>
-    <TR><TD>34.43</TD> <TD>30.65</TD> <TD>0.1097</TD> <TD>Wwim</TD> <TD>g</TD> <TD>ultimate wet weight of males</TD></TR>
-    <TR><TD>0.008082</TD> <TD>0.007986</TD> <TD>0.01188</TD> <TD>Ri</TD> <TD>#/d</TD> <TD>maximum reprod rate</TD></TR>
-    <TR><TD colspan="2">see figure</TD> <TD>0.06858</TD> <TD>tL</TD> <TD colspan="2">time since birth, <font color="blue"><i>vs.</i></font> SVL</TD>
-    <TR class="psd"><TD>0.02</TD> <TD>0.06303</TD> <TD>2.152</TD> <TD>psd.v</TD> <TD>cm/d</TD> <TD>energy conductance</TD></TR>
-    <TR class="psd"><TD>0.8</TD> <TD>0.7629</TD> <TD>0.04635</TD> <TD>psd.kap</TD> <TD>-</TD> <TD>allocation fraction to soma</TD></TR>
+    <TR><TD> 56</TD> <TD>59.51</TD> <TD>0.06263</TD> <TD>ab</TD> <TD>d</TD> <TD>age at birth</TD></TR>
+    <TR><TD>1460</TD> <TD>1350</TD> <TD>0.07533</TD> <TD>tp</TD> <TD>d</TD> <TD>time since birth at puberty</TD></TR>
+    <TR><TD>2920</TD> <TD>2920</TD> <TD>8.999e-06</TD> <TD>am</TD> <TD>d</TD> <TD>life span</TD></TR>
+    <TR><TD>4.5</TD> <TD>4.003</TD> <TD>0.1105</TD> <TD>Lb</TD> <TD>cm</TD> <TD>SVL at hatching</TD></TR>
+    <TR><TD>7.7</TD> <TD>9.279</TD> <TD>0.2051</TD> <TD>Lp</TD> <TD>cm</TD> <TD>SVL at puberty</TD></TR>
+    <TR><TD>8.1</TD> <TD>12.21</TD> <TD>0.5076</TD> <TD>Lpm</TD> <TD>cm</TD> <TD>SVL at puberty males</TD></TR>
+    <TR><TD>10.2</TD> <TD>11.18</TD> <TD>0.09597</TD> <TD>Li</TD> <TD>cm</TD> <TD>ultimate SVL</TD></TR>
+    <TR><TD>12.2</TD> <TD>12.21</TD> <TD>0.0009618</TD> <TD>Lim</TD> <TD>cm</TD> <TD>ultimate SVL males</TD></TR>
+    <TR><TD>1.63</TD> <TD>1.748</TD> <TD>0.07238</TD> <TD>Ww0</TD> <TD>g</TD> <TD>wet weight of egg</TD></TR>
+    <TR><TD>1.16</TD> <TD>1.065</TD> <TD>0.08149</TD> <TD>Wwb</TD> <TD>g</TD> <TD>wet weight of hatchlings</TD></TR>
+    <TR><TD>20.72</TD> <TD>23.21</TD> <TD>0.1201</TD> <TD>Wwi</TD> <TD>g</TD> <TD>ultimate wet weight</TD></TR>
+    <TR><TD>34.43</TD> <TD>30.71</TD> <TD>0.1081</TD> <TD>Wwim</TD> <TD>g</TD> <TD>ultimate wet weight of males</TD></TR>
+    <TR><TD>0.008082</TD> <TD>0.007857</TD> <TD>0.0279</TD> <TD>Ri</TD> <TD>#/d</TD> <TD>maximum reprod rate</TD></TR>
+    <TR><TD colspan="2">see figure</TD> <TD>0.06817</TD> <TD>tL</TD> <TD colspan="2">time since birth, <font color="blue"><i>vs.</i></font> SVL</TD>
+    <TR class="psd"><TD>0.02</TD> <TD>0.06123</TD> <TD>2.061</TD> <TD>psd.v</TD> <TD>cm/d</TD> <TD>energy conductance</TD></TR>
+    <TR class="psd"><TD>0.8</TD> <TD>0.7036</TD> <TD>0.1205</TD> <TD>psd.kap</TD> <TD>-</TD> <TD>allocation fraction to soma</TD></TR>
     <TR class="psd"><TD>0.95</TD> <TD>0.95</TD> <TD>  0</TD> <TD>psd.kap_R</TD> <TD>-</TD> <TD>reproduction efficiency</TD></TR>
-    <TR class="psd"><TD> 18</TD> <TD>21.19</TD> <TD>0.1773</TD> <TD>psd.p_M</TD> <TD>J/d.cm^3</TD> <TD>vol-spec som maint</TD></TR>
-    <TR class="psd"><TD>0.002</TD> <TD>0.0007962</TD> <TD>0.6019</TD> <TD>psd.k_J</TD> <TD>1/d</TD> <TD>maturity maint rate coefficient</TD></TR>
-    <TR class="psd"><TD>0.8</TD> <TD>0.802</TD> <TD>0.002508</TD> <TD>psd.kap_G</TD> <TD>-</TD> <TD>growth efficiency</TD></TR>
-    <TR class="psd"><TD>0.3</TD> <TD>0.294</TD> <TD>0.01985</TD> <TD>psd.k</TD> <TD>-</TD> <TD>maintenance ratio</TD></TR>
+    <TR class="psd"><TD> 18</TD> <TD>21.51</TD> <TD>0.195</TD> <TD>psd.p_M</TD> <TD>J/d.cm^3</TD> <TD>vol-spec som maint</TD></TR>
+    <TR class="psd"><TD>0.002</TD> <TD>0.002</TD> <TD>  0</TD> <TD>psd.k_J</TD> <TD>1/d</TD> <TD>maturity maint rate coefficient</TD></TR>
+    <TR class="psd"><TD>0.8</TD> <TD>0.8029</TD> <TD>0.003588</TD> <TD>psd.kap_G</TD> <TD>-</TD> <TD>growth efficiency</TD></TR>
   </TABLE>
   </div>
 
@@ -83,25 +82,25 @@
     <TR class="head"><TH>symbol</TH> <TH>units</TH> <TH>value</TH>  <TH>free</TH> <TH>description</TH> </TR>
     <TR><TD>T_ref</TD> <TD>K</TD> <TD>293.1</TD> <TD>0</TD> <TD>Reference temperature</TD></TR>
     <TR><TD>T_A</TD> <TD>K</TD> <TD>8000</TD> <TD>0</TD> <TD>Arrhenius temperature</TD></TR>
-    <TR><TD>z</TD> <TD>-</TD> <TD>2.694</TD> <TD>1</TD> <TD>zoom factor for females</TD></TR>
+    <TR><TD>z</TD> <TD>-</TD> <TD>2.688</TD> <TD>1</TD> <TD>zoom factor for females</TD></TR>
     <TR><TD>F_m</TD> <TD>l/d.cm^2</TD> <TD>6.5</TD> <TD>0</TD> <TD>{F_m}, max spec searching rate</TD></TR>
     <TR><TD>kap_X</TD> <TD>-</TD> <TD>0.8</TD> <TD>0</TD> <TD>digestion efficiency of food to reserve</TD></TR>
     <TR><TD>kap_P</TD> <TD>-</TD> <TD>0.1</TD> <TD>0</TD> <TD>faecation efficiency of food to faeces</TD></TR>
-    <TR><TD>v</TD> <TD>cm/d</TD> <TD>0.06303</TD> <TD>1</TD> <TD>energy conductance</TD></TR>
-    <TR><TD>kap</TD> <TD>-</TD> <TD>0.7629</TD> <TD>1</TD> <TD>allocation fraction to soma</TD></TR>
+    <TR><TD>v</TD> <TD>cm/d</TD> <TD>0.06123</TD> <TD>1</TD> <TD>energy conductance</TD></TR>
+    <TR><TD>kap</TD> <TD>-</TD> <TD>0.7036</TD> <TD>1</TD> <TD>allocation fraction to soma</TD></TR>
     <TR><TD>kap_R</TD> <TD>-</TD> <TD>0.95</TD> <TD>0</TD> <TD>reproduction efficiency</TD></TR>
-    <TR><TD>p_M</TD> <TD>J/d.cm^3</TD> <TD>21.19</TD> <TD>1</TD> <TD>[p_M], vol-spec somatic maint</TD></TR>
+    <TR><TD>p_M</TD> <TD>J/d.cm^3</TD> <TD>21.51</TD> <TD>1</TD> <TD>[p_M], vol-spec somatic maint</TD></TR>
     <TR><TD>p_T</TD> <TD>J/d.cm^2</TD> <TD>  0</TD> <TD>0</TD> <TD>{p_T}, surf-spec somatic maint</TD></TR>
-    <TR><TD>k_J</TD> <TD>1/d</TD> <TD>0.0007962</TD> <TD>1</TD> <TD>maturity maint rate coefficient</TD></TR>
-    <TR><TD>E_G</TD> <TD>J/cm^3</TD> <TD>7826</TD> <TD>1</TD> <TD>[E_G], spec cost for structure</TD></TR>
-    <TR><TD>E_Hb</TD> <TD>J</TD> <TD>2455</TD> <TD>1</TD> <TD>maturity at birth</TD></TR>
-    <TR><TD>E_Hp</TD> <TD>J</TD> <TD>5.841e+04</TD> <TD>1</TD> <TD>maturity at puberty</TD></TR>
-    <TR><TD>h_a</TD> <TD>1/d^2</TD> <TD>4.201e-09</TD> <TD>1</TD> <TD>Weibull aging acceleration</TD></TR>
+    <TR><TD>k_J</TD> <TD>1/d</TD> <TD>0.002</TD> <TD>0</TD> <TD>maturity maint rate coefficient</TD></TR>
+    <TR><TD>E_G</TD> <TD>J/cm^3</TD> <TD>7817</TD> <TD>1</TD> <TD>[E_G], spec cost for structure</TD></TR>
+    <TR><TD>E_Hb</TD> <TD>J</TD> <TD>3012</TD> <TD>1</TD> <TD>maturity at birth</TD></TR>
+    <TR><TD>E_Hp</TD> <TD>J</TD> <TD>4.655e+04</TD> <TD>1</TD> <TD>maturity at puberty</TD></TR>
+    <TR><TD>h_a</TD> <TD>1/d^2</TD> <TD>4.317e-09</TD> <TD>1</TD> <TD>Weibull aging acceleration</TD></TR>
     <TR><TD>s_G</TD> <TD>-</TD> <TD>0.0001</TD> <TD>0</TD> <TD>Gompertz stress coefficient</TD></TR>
-    <TR><TD>E_Hpm</TD> <TD>J</TD> <TD>4.06e+05</TD> <TD>1</TD> <TD>maturity at puberty for males</TD></TR>
-    <TR><TD>del_M</TD> <TD>-</TD> <TD>0.2414</TD> <TD>1</TD> <TD>shape coefficient</TD></TR>
+    <TR><TD>E_Hpm</TD> <TD>J</TD> <TD>5.722e+05</TD> <TD>1</TD> <TD>maturity at puberty for males</TD></TR>
+    <TR><TD>del_M</TD> <TD>-</TD> <TD>0.2405</TD> <TD>1</TD> <TD>shape coefficient</TD></TR>
     <TR><TD>f</TD> <TD>-</TD> <TD>  1</TD> <TD>0</TD> <TD>scaled functional response for 0-var data</TD></TR>
-    <TR><TD>z_m</TD> <TD>-</TD> <TD>2.954</TD> <TD>1</TD> <TD>zoom factor for males</TD></TR>
+    <TR><TD>z_m</TD> <TD>-</TD> <TD>2.937</TD> <TD>1</TD> <TD>zoom factor for males</TD></TR>
   </TABLE>
   </div>
 
