--- a/Gallotia_bravoana_res.html
+++ b/Gallotia_bravoana_res.html
@@ -44,7 +44,7 @@
   </div>
 
   <div class="par">
-  <h4>COMPLETE = 2.4; MRE =    0.036; SMSE =    0.036 </h4>
+  <h4>COMPLETE = 2.4; MRE =    0.033; SMSE =    0.035 </h4>
   </div>
 
   <p class="clear"></p>
@@ -53,26 +53,24 @@
   <h2>Data & predictions</h2>
   <TABLE id="prd">
     <TR  class="head"><TH>data</TH> <TH>prd</TH> <TH>RE</TH>  <TH>symbol</TH> <TH>units</TH> <TH>description</TH> </TR>
-    <TR><TD> 60</TD> <TD>63.42</TD> <TD>0.05702</TD> <TD>ab</TD> <TD>d</TD> <TD>age at birth</TD></TR>
-    <TR><TD>1050</TD> <TD>1058</TD> <TD>0.007464</TD> <TD>tp</TD> <TD>d</TD> <TD>time since birth at puberty</TD></TR>
-    <TR><TD>3990</TD> <TD>3990</TD> <TD>3.035e-09</TD> <TD>am</TD> <TD>d</TD> <TD>life span</TD></TR>
-    <TR><TD>5.5</TD> <TD>5.019</TD> <TD>0.0874</TD> <TD>Lb</TD> <TD>cm</TD> <TD>SVL at hatching</TD></TR>
-    <TR><TD>13.1</TD> <TD>13.01</TD> <TD>0.006537</TD> <TD>Lp</TD> <TD>cm</TD> <TD>SVL at puberty</TD></TR>
-    <TR><TD>13.5</TD> <TD>13.5</TD> <TD>1.111e-08</TD> <TD>Lpm</TD> <TD>cm</TD> <TD>SVL at puberty males</TD></TR>
-    <TR><TD>15.5</TD> <TD>17.05</TD> <TD>0.1002</TD> <TD>Li</TD> <TD>cm</TD> <TD>ultimate SVL</TD></TR>
-    <TR><TD> 19</TD> <TD>19.05</TD> <TD>0.002614</TD> <TD>Lim</TD> <TD>cm</TD> <TD>ultimate SVL males</TD></TR>
-    <TR><TD>  6</TD> <TD>5.732</TD> <TD>0.04474</TD> <TD>Ww0</TD> <TD>g</TD> <TD>wet weight of eggs</TD></TR>
-    <TR><TD>3.5</TD> <TD>3.757</TD> <TD>0.07346</TD> <TD>Wwb</TD> <TD>g</TD> <TD>wet weight of hatchlings</TD></TR>
-    <TR><TD>159.2</TD> <TD>147.3</TD> <TD>0.07449</TD> <TD>Wwi</TD> <TD>g</TD> <TD>ultimate wet weight</TD></TR>
-    <TR><TD>210.5</TD> <TD>210.2</TD> <TD>0.001622</TD> <TD>Wwim</TD> <TD>g</TD> <TD>ultimate wet males</TD></TR>
-    <TR><TD>0.01918</TD> <TD>0.01939</TD> <TD>0.01102</TD> <TD>Ri</TD> <TD>#/d</TD> <TD>maximum reprod rate</TD></TR>
-    <TR class="psd"><TD>0.02</TD> <TD>0.07472</TD> <TD>2.736</TD> <TD>psd.v</TD> <TD>cm/d</TD> <TD>energy conductance</TD></TR>
-    <TR class="psd"><TD>0.8</TD> <TD>0.7545</TD> <TD>0.05688</TD> <TD>psd.kap</TD> <TD>-</TD> <TD>allocation fraction to soma</TD></TR>
+    <TR><TD> 60</TD> <TD>63.42</TD> <TD>0.05697</TD> <TD>ab</TD> <TD>d</TD> <TD>age at birth</TD></TR>
+    <TR><TD>1050</TD> <TD>1054</TD> <TD>0.003491</TD> <TD>tp</TD> <TD>d</TD> <TD>time since birth at puberty</TD></TR>
+    <TR><TD>3990</TD> <TD>3990</TD> <TD>2.395e-09</TD> <TD>am</TD> <TD>d</TD> <TD>life span</TD></TR>
+    <TR><TD>5.5</TD> <TD>4.974</TD> <TD>0.09558</TD> <TD>Lb</TD> <TD>cm</TD> <TD>SVL at hatching</TD></TR>
+    <TR><TD>13.1</TD> <TD>13.08</TD> <TD>0.001479</TD> <TD>Lp</TD> <TD>cm</TD> <TD>SVL at puberty</TD></TR>
+    <TR><TD>15.5</TD> <TD>17.12</TD> <TD>0.1044</TD> <TD>Li</TD> <TD>cm</TD> <TD>ultimate SVL</TD></TR>
+    <TR><TD> 19</TD> <TD>19.05</TD> <TD>0.002582</TD> <TD>Lim</TD> <TD>cm</TD> <TD>ultimate SVL males</TD></TR>
+    <TR><TD>  6</TD> <TD>5.861</TD> <TD>0.02323</TD> <TD>Ww0</TD> <TD>g</TD> <TD>wet weight of eggs</TD></TR>
+    <TR><TD>3.5</TD> <TD>3.654</TD> <TD>0.04394</TD> <TD>Wwb</TD> <TD>g</TD> <TD>wet weight of hatchlings</TD></TR>
+    <TR><TD>159.2</TD> <TD>148.9</TD> <TD>0.06458</TD> <TD>Wwi</TD> <TD>g</TD> <TD>ultimate wet weight</TD></TR>
+    <TR><TD>210.5</TD> <TD>210.2</TD> <TD>0.001594</TD> <TD>Wwim</TD> <TD>g</TD> <TD>ultimate wet males</TD></TR>
+    <TR><TD>0.01918</TD> <TD>0.01925</TD> <TD>0.003861</TD> <TD>Ri</TD> <TD>#/d</TD> <TD>maximum reprod rate</TD></TR>
+    <TR class="psd"><TD>0.02</TD> <TD>0.07308</TD> <TD>2.654</TD> <TD>psd.v</TD> <TD>cm/d</TD> <TD>energy conductance</TD></TR>
+    <TR class="psd"><TD>0.8</TD> <TD>0.706</TD> <TD>0.1175</TD> <TD>psd.kap</TD> <TD>-</TD> <TD>allocation fraction to soma</TD></TR>
     <TR class="psd"><TD>0.95</TD> <TD>0.95</TD> <TD>  0</TD> <TD>psd.kap_R</TD> <TD>-</TD> <TD>reproduction efficiency</TD></TR>
-    <TR class="psd"><TD> 18</TD> <TD>19.61</TD> <TD>0.08948</TD> <TD>psd.p_M</TD> <TD>J/d.cm^3</TD> <TD>vol-spec som maint</TD></TR>
-    <TR class="psd"><TD>0.002</TD> <TD>0.000758</TD> <TD>0.621</TD> <TD>psd.k_J</TD> <TD>1/d</TD> <TD>maturity maint rate coefficient</TD></TR>
-    <TR class="psd"><TD>0.8</TD> <TD>0.7988</TD> <TD>0.001549</TD> <TD>psd.kap_G</TD> <TD>-</TD> <TD>growth efficiency</TD></TR>
-    <TR class="psd"><TD>0.3</TD> <TD>0.3037</TD> <TD>0.01231</TD> <TD>psd.k</TD> <TD>-</TD> <TD>maintenance ratio</TD></TR>
+    <TR class="psd"><TD> 18</TD> <TD>19.94</TD> <TD>0.1078</TD> <TD>psd.p_M</TD> <TD>J/d.cm^3</TD> <TD>vol-spec som maint</TD></TR>
+    <TR class="psd"><TD>0.002</TD> <TD>0.002</TD> <TD>  0</TD> <TD>psd.k_J</TD> <TD>1/d</TD> <TD>maturity maint rate coefficient</TD></TR>
+    <TR class="psd"><TD>0.8</TD> <TD>0.7995</TD> <TD>0.0005722</TD> <TD>psd.kap_G</TD> <TD>-</TD> <TD>growth efficiency</TD></TR>
   </TABLE>
   </div>
 
@@ -82,25 +80,24 @@
     <TR class="head"><TH>symbol</TH> <TH>units</TH> <TH>value</TH>  <TH>free</TH> <TH>description</TH> </TR>
     <TR><TD>T_ref</TD> <TD>K</TD> <TD>293.1</TD> <TD>0</TD> <TD>Reference temperature</TD></TR>
     <TR><TD>T_A</TD> <TD>K</TD> <TD>8000</TD> <TD>0</TD> <TD>Arrhenius temperature</TD></TR>
-    <TR><TD>z</TD> <TD>-</TD> <TD>4.907</TD> <TD>1</TD> <TD>zoom factor for females</TD></TR>
+    <TR><TD>z</TD> <TD>-</TD> <TD>4.89</TD> <TD>1</TD> <TD>zoom factor for females</TD></TR>
     <TR><TD>F_m</TD> <TD>l/d.cm^2</TD> <TD>6.5</TD> <TD>0</TD> <TD>{F_m}, max spec searching rate</TD></TR>
     <TR><TD>kap_X</TD> <TD>-</TD> <TD>0.8</TD> <TD>0</TD> <TD>digestion efficiency of food to reserve</TD></TR>
     <TR><TD>kap_P</TD> <TD>-</TD> <TD>0.1</TD> <TD>0</TD> <TD>faecation efficiency of food to faeces</TD></TR>
-    <TR><TD>v</TD> <TD>cm/d</TD> <TD>0.07472</TD> <TD>1</TD> <TD>energy conductance</TD></TR>
-    <TR><TD>kap</TD> <TD>-</TD> <TD>0.7545</TD> <TD>1</TD> <TD>allocation fraction to soma</TD></TR>
+    <TR><TD>v</TD> <TD>cm/d</TD> <TD>0.07308</TD> <TD>1</TD> <TD>energy conductance</TD></TR>
+    <TR><TD>kap</TD> <TD>-</TD> <TD>0.706</TD> <TD>1</TD> <TD>allocation fraction to soma</TD></TR>
     <TR><TD>kap_R</TD> <TD>-</TD> <TD>0.95</TD> <TD>0</TD> <TD>reproduction efficiency</TD></TR>
-    <TR><TD>p_M</TD> <TD>J/d.cm^3</TD> <TD>19.61</TD> <TD>1</TD> <TD>[p_M], vol-spec somatic maint</TD></TR>
+    <TR><TD>p_M</TD> <TD>J/d.cm^3</TD> <TD>19.94</TD> <TD>1</TD> <TD>[p_M], vol-spec somatic maint</TD></TR>
     <TR><TD>p_T</TD> <TD>J/d.cm^2</TD> <TD>  0</TD> <TD>0</TD> <TD>{p_T}, surf-spec somatic maint</TD></TR>
-    <TR><TD>k_J</TD> <TD>1/d</TD> <TD>0.000758</TD> <TD>1</TD> <TD>maturity maint rate coefficient</TD></TR>
-    <TR><TD>E_G</TD> <TD>J/cm^3</TD> <TD>7857</TD> <TD>1</TD> <TD>[E_G], spec cost for structure</TD></TR>
-    <TR><TD>E_Hb</TD> <TD>J</TD> <TD>8215</TD> <TD>1</TD> <TD>maturity at birth</TD></TR>
-    <TR><TD>E_Hp</TD> <TD>J</TD> <TD>2.566e+05</TD> <TD>1</TD> <TD>maturity at puberty</TD></TR>
-    <TR><TD>h_a</TD> <TD>1/d^2</TD> <TD>1.464e-09</TD> <TD>1</TD> <TD>Weibull aging acceleration</TD></TR>
+    <TR><TD>k_J</TD> <TD>1/d</TD> <TD>0.002</TD> <TD>0</TD> <TD>maturity maint rate coefficient</TD></TR>
+    <TR><TD>E_G</TD> <TD>J/cm^3</TD> <TD>7850</TD> <TD>1</TD> <TD>[E_G], spec cost for structure</TD></TR>
+    <TR><TD>E_Hb</TD> <TD>J</TD> <TD>9566</TD> <TD>1</TD> <TD>maturity at birth</TD></TR>
+    <TR><TD>E_Hp</TD> <TD>J</TD> <TD>2.016e+05</TD> <TD>1</TD> <TD>maturity at puberty</TD></TR>
+    <TR><TD>h_a</TD> <TD>1/d^2</TD> <TD>1.491e-09</TD> <TD>1</TD> <TD>Weibull aging acceleration</TD></TR>
     <TR><TD>s_G</TD> <TD>-</TD> <TD>0.0001</TD> <TD>0</TD> <TD>Gompertz stress coefficient</TD></TR>
-    <TR><TD>E_Hpm</TD> <TD>J</TD> <TD>1.926e+05</TD> <TD>1</TD> <TD>maturity at puberty for males</TD></TR>
-    <TR><TD>del_M</TD> <TD>-</TD> <TD>0.2877</TD> <TD>1</TD> <TD>shape coefficient</TD></TR>
+    <TR><TD>del_M</TD> <TD>-</TD> <TD>0.2856</TD> <TD>1</TD> <TD>shape coefficient</TD></TR>
     <TR><TD>f</TD> <TD>-</TD> <TD>  1</TD> <TD>0</TD> <TD>scaled functional response for 0-var data</TD></TR>
-    <TR><TD>z_m</TD> <TD>-</TD> <TD>5.481</TD> <TD>1</TD> <TD>zoom factor for males</TD></TR>
+    <TR><TD>z_m</TD> <TD>-</TD> <TD>5.441</TD> <TD>1</TD> <TD>zoom factor for males</TD></TR>
   </TABLE>
   </div>
 
